--- a/index.html
+++ b/index.html
@@ -1,19 +1,205 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="./styles.css" rel="stylesheet">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
 
-    <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+  <link href="./styles.css" rel="stylesheet">
+  <!--title>Hello World!</title-->
+</head>
+
+<body>
+  <a href="login.html" style="display:none;" id="login-redirect"></a>
+  <header id="titlebar">
+    <image src="logo.png" width="46px" style="position: absolute; left: 7px; top: 7px;" />
+    <h1 id="tabTitle">Notes</h1>
+  </header>
+
+
+  <div id="sidebar">
+    <span id="menuButton">
+      <image src="menu.png" width="34px" />
+    </span>
+    <span id="notesButton" onclick="switchTab(this)">
+      <image src="notes.png" width="34px" />
+    </span>
+    <span id="profileButton" onclick="switchTab(this)">
+      <image src="profile.png" width="34px" />
+    </span>
+    <span id="settingsButton" onclick="switchTab(this)">
+      <image src="settings.png" width="34px" />
+    </span>
+  </div>
+
+
+  <div id="mainPlane">
+    <div class="tab" id="notesTab">
+      <div id="notesList"></div>
+      <div id="notePlane"></div>
+    </div>
+    <div class="tab closed" id="settingsTab">
+
+    </div>
+    <div class="tab closed" id="profileTab">
+      <span onclick="logout()">logout</span>
+    </div>
+  </div>
+  <!-- You can also require other files to run in this process -->
+  <script src="./renderer.js"></script>
+  <script src="./ui.js"></script>
+</body>
+
 </html>
+<style>
+  * {
+    font: 46px / 50px D-DIN-Bold, Arial, Verdana, sans-serif;
+  }
+
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    background-color: #04090e;
+    color: white;
+    overflow-y: hidden;
+  }
+
+  #titlebar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    height: 60px;
+    width: calc(100% - 2px);
+    /*Compensate for body 1px border*/
+    background: #04090e;
+  }
+
+  #titlebar #tabTitle {
+    font-size: 30px;
+  }
+
+  #sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
+    position: absolute;
+    height: calc(100% - 72px);
+    width: 60px;
+    top: 70px;
+    /*Compensate for body 1px border*/
+    background: #04090e;
+  }
+
+  #sidebar span {
+    width: 50px;
+    height: 50px;
+    background: #04090e;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+  }
+
+  #sidebar span:hover {
+    background: #081017;
+  }
+
+  #sidebar #settingsButton {
+    margin-top: auto;
+    margin-bottom: 5px;
+  }
+
+  #mainPlane {
+    /*background-color: #09131C;*/
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: calc(100% - 60px);
+    height: calc(100% - 60px);
+    border-radius: 10px 0% 0% 0%;
+    overflow: hidden;
+  }
+
+  .tab {
+    width: 100%;
+    height: 100%;
+  }
+
+  .closed {
+    display: none !important;
+  }
+
+  #notesTab {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #notesList {
+    border-right: 2px solid #04090e;
+    border-radius: 0px 10px 0px 0px;
+    height: 100%;
+    width: 20%;
+    background-color: #081017;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #notePlane {
+    height: 100%;
+    width: 80%;
+    border-radius: 10px 0px 0px 0px;
+    background-color: #081017;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 0.5em;
+  }
+
+  .notePreview {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid #04090e;
+    padding: 5px;
+  }
+
+  .notePreview .notePreviewTitle {
+    font-size: 0.6em;
+    line-height: 1.5em;
+  }
+
+  .notePreview .notePreviewText {
+    font-size: 0.35em;
+    line-height: 1.1em;
+  }
+
+  #title {
+    height: 1.75em;
+    font-size: 1.25em;
+    background: #081017;
+    border: none;
+    resize: none;
+    color: white;
+  }
+
+  #note {
+    height: calc(100% - 1.75em);
+    font-size: .75em;
+    background: #081017;
+    border: none;
+    color: white;
+    resize: none;
+  }
+
+  #note:focus,
+  #title:focus {
+    border: none;
+    outline: none;
+  }
+</style>
