--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </div>
     <div class="tab closed" id="profileTab">
-      <span onclick="logout()" style="background: #04090e">logout</span>
+      <span onclick="logout()" style="background: #fe1212">logout</span>
     </div>
   </div>
   <!-- You can also require other files to run in this process -->
