--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
   <link href="./styles.css" rel="stylesheet">
   <!--title>Hello World!</title-->
@@ -94,6 +95,7 @@
     top: 70px;
     /*Compensate for body 1px border*/
     background: #04090e;
+    z-index: 10;
   }
 
   #sidebar span {
@@ -201,5 +203,67 @@
   #title:focus {
     border: none;
     outline: none;
+  }
+
+  @media only screen and (max-width: 768px) {
+    #sidebar {
+      flex-direction: row;
+      width: 100%;
+      height: 60px;
+      position: absolute;
+      bottom: 0px;
+      left: 0px;
+      top: auto;
+      justify-content: center;
+      gap: 50px;
+    }
+
+    #mainPlane {
+      /*background-color: #09131C;*/
+      position: absolute;
+      left: 0;
+      bottom: 60px;
+      width: 100%;
+      height: calc(100% - 120px);
+      border-radius: 0px 0% 0% 0%;
+      overflow: hidden;
+    }
+
+    #notesList {
+      width: 40%;
+    }
+
+    .notePreview .notePreviewTitle {
+      font-size: 0.4em;
+      line-height: 1.5em;
+    }
+
+    .notePreview .notePreviewText {
+      font-size: 0.25em;
+      line-height: 1.1em;
+    }
+
+    #title {
+      height: 1.5em;
+      font-size: 0.75em;
+      background: #081017;
+      border: none;
+      resize: none;
+      color: white;
+    }
+
+    #note {
+      height: calc(100% - 1.5em);
+      font-size: .3em;
+      background: #081017;
+      border: none;
+      color: white;
+      resize: none;
+    }
+
+    #createButton,
+    #deleteButton {
+      font-size: 0.4em;
+    }
   }
 </style>
